format card cleaner and add some sample cards

--- a/src/Card.css
+++ b/src/Card.css
@@ -3,12 +3,13 @@
   width: 200px;
   background-color: lightblue;
   border-radius: 10px;
+  position: relative;
 }
 
 .header {
   display: flex;
   justify-content: space-between;
-  background-color: red;
+  background-color: rgb(235, 235, 235);
 }
 
 .Points {
@@ -21,4 +22,11 @@
   /* text-align: right; */
   font-size: 45px;
   padding-right: 5px;
+}
+
+.bottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin: 10px;
 }
