add more cards and add all rows to board

--- a/src/Board.css
+++ b/src/Board.css
@@ -1,4 +1,11 @@
+.AvailableCards {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
 .row {
   display: flex;
   justify-content: space-evenly;
+  gap: 1rem;
 }
